tests/snapshots/snapshot_fixtures__fixtures__printf_general_rejected.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/printf_general_rejected.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[17] = "%g %.3g %-10.3g\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[9] = "%G %.3G\n" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[6] = "%.*g\n" [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[5] = "% g\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca double, "x", align 8
    %2 = alloca s32i, "prec", align 4
    %3 = const 0 : s32i
    store %3, %0
    %4 = const 1234.5678 : double
    store %4, %1, align 8
    %5 = const 3 : s32i
    store %5, %2, align 4
    %6 = get_global @printf : ((s8i*, ...) -> s32i)*
    %7 = get_global @.str : s8i[17]*
    %8 = cast(array_to_ptrdecay) %7 : s8i*
    %9 = load %1 : double, align 8
    %10 = load %1 : double, align 8
    %11 = load %1 : double, align 8
    %12 = call @printf(%8, %9, %10, %11) : s32i [all]
    %13 = get_global @printf : ((s8i*, ...) -> s32i)*
    %14 = get_global @.str.1 : s8i[9]*
    %15 = cast(array_to_ptrdecay) %14 : s8i*
    %16 = load %1 : double, align 8
    %17 = load %1 : double, align 8
    %18 = call @printf(%15, %16, %17) : s32i [all]
    %19 = get_global @printf : ((s8i*, ...) -> s32i)*
    %20 = get_global @.str.2 : s8i[6]*
    %21 = cast(array_to_ptrdecay) %20 : s8i*
    %22 = load %2 : s32i, align 4
    %23 = load %1 : double, align 8
    %24 = call @printf(%21, %22, %23) : s32i [all]
    %25 = get_global @printf : ((s8i*, ...) -> s32i)*
    %26 = get_global @.str.3 : s8i[5]*
    %27 = cast(array_to_ptrdecay) %26 : s8i*
    %28 = load %1 : double, align 8
    %29 = call @printf(%27, %28) : s32i [all]
    %30 = const 0 : s32i
    store %30, %0
    %31 = load %0 : s32i
    return %31
}
