tests/snapshots/snapshot_fixtures__fixtures__printf_hex_octal.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/printf_hex_octal.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[10] = "%x %X %o\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[15] = "%08x|%-4X|%5o\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca u32i, "value", align 4
    %2 = alloca u32i, "mask", align 4
    %3 = alloca u64i, "wide", align 8
    %4 = const 0 : s32i
    store %4, %0
    %5 = const 48879 : u32i
    store %5, %1, align 4
    %6 = const 255 : u32i
    store %6, %2, align 4
    %7 = const 511 : u64i
    store %7, %3, align 8
    %8 = get_global @printf : ((s8i*, ...) -> s32i)*
    %9 = get_global @.str : s8i[10]*
    %10 = cast(array_to_ptrdecay) %9 : s8i*
    %11 = load %1 : u32i, align 4
    %12 = load %2 : u32i, align 4
    %13 = load %3 : u64i, align 8
    %14 = call @printf(%10, %11, %12, %13) : s32i [all]
    %15 = get_global @printf : ((s8i*, ...) -> s32i)*
    %16 = get_global @.str.1 : s8i[15]*
    %17 = cast(array_to_ptrdecay) %16 : s8i*
    %18 = load %2 : u32i, align 4
    %19 = load %2 : u32i, align 4
    %20 = load %2 : u32i, align 4
    %21 = call @printf(%17, %18, %19, %20) : s32i [all]
    %22 = const 0 : s32i
    store %22, %0
    %23 = load %0 : s32i
    return %23
}
