tests/snapshots/snapshot_fixtures__fixtures__printf_integer_widths.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/printf_integer_widths.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[26] = "%05d|%-4d|%+d|%5u|%+06ld\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "a", align 4
    %2 = alloca s32i, "b", align 4
    %3 = alloca s32i, "c", align 4
    %4 = alloca u32i, "u", align 4
    %5 = alloca s64i, "l", align 8
    %6 = const 0 : s32i
    store %6, %0
    %7 = const 42 : s32i
    store %7, %1, align 4
    %8 = const 7 : s32i
    store %8, %2, align 4
    %9 = const -42 : s32i
    store %9, %3, align 4
    %10 = const 9 : u32i
    store %10, %4, align 4
    %11 = const 123 : s64i
    store %11, %5, align 8
    %12 = get_global @printf : ((s8i*, ...) -> s32i)*
    %13 = get_global @.str : s8i[26]*
    %14 = cast(array_to_ptrdecay) %13 : s8i*
    %15 = load %1 : s32i, align 4
    %16 = load %2 : s32i, align 4
    %17 = load %3 : s32i, align 4
    %18 = load %4 : u32i, align 4
    %19 = load %5 : s64i, align 8
    %20 = call @printf(%14, %15, %16, %17, %18, %19) : s32i [all]
    %21 = const 0 : s32i
    store %21, %0
    %22 = load %0 : s32i
    return %22
}
