tests/snapshots/snapshot_fixtures__fixtures__printf_literal_escaping.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/printf_literal_escaping.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[38] = "{%d} %% \"quoted\" back\\slash %s|%c|%x\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[3] = "hi" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[12] = "}}%%{{%d}}\n" [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[12] = "%%%%%d%%%%\n" [cir_private, default, align 1, dso_local, constant]
global .str.4 : s8i[12] = "{{}}%s{{}}\n" [cir_private, default, align 1, dso_local, constant]
global .str.5 : s8i[4] = "mid" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "d", align 4
    %2 = alloca u32i, "h", align 4
    %3 = const 0 : s32i
    store %3, %0
    %4 = const 5 : s32i
    store %4, %1, align 4
    %5 = const 171 : u32i
    store %5, %2, align 4
    %6 = get_global @printf : ((s8i*, ...) -> s32i)*
    %7 = get_global @.str : s8i[38]*
    %8 = cast(array_to_ptrdecay) %7 : s8i*
    %9 = load %1 : s32i, align 4
    %10 = get_global @.str.1 : s8i[3]*
    %11 = cast(array_to_ptrdecay) %10 : s8i*
    %12 = const 88 : s32i
    %13 = load %2 : u32i, align 4
    %14 = call @printf(%8, %9, %11, %12, %13) : s32i [all]
    %15 = get_global @printf : ((s8i*, ...) -> s32i)*
    %16 = get_global @.str.2 : s8i[12]*
    %17 = cast(array_to_ptrdecay) %16 : s8i*
    %18 = load %1 : s32i, align 4
    %19 = call @printf(%17, %18) : s32i [all]
    %20 = get_global @printf : ((s8i*, ...) -> s32i)*
    %21 = get_global @.str.3 : s8i[12]*
    %22 = cast(array_to_ptrdecay) %21 : s8i*
    %23 = load %1 : s32i, align 4
    %24 = call @printf(%22, %23) : s32i [all]
    %25 = get_global @printf : ((s8i*, ...) -> s32i)*
    %26 = get_global @.str.4 : s8i[12]*
    %27 = cast(array_to_ptrdecay) %26 : s8i*
    %28 = get_global @.str.5 : s8i[4]*
    %29 = cast(array_to_ptrdecay) %28 : s8i*
    %30 = call @printf(%27, %29) : s32i [all]
    %31 = const 0 : s32i
    store %31, %0
    %32 = load %0 : s32i
    return %32
}
