tests/snapshots/snapshot_fixtures__fixtures__printf_narrow_length_modifiers.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/printf_narrow_length_modifiers.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[31] = "%hd %hu %hhd %hhu %jd %ju %td\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[24] = "%hhd %hhd %hhu %hd %hu\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s16i, "s", align 2
    %2 = alloca u16i, "us", align 2
    %3 = alloca s8i, "c", align 1
    %4 = alloca u8i, "uc", align 1
    %5 = alloca s64i, "j", align 8
    %6 = alloca u64i, "ju", align 8
    %7 = alloca s64i, "t", align 8
    %8 = alloca s32i, "full_int", align 4
    %9 = alloca s32i, "negative", align 4
    %10 = alloca u32i, "wide", align 4
    %11 = const 0 : s32i
    store %11, %0
    %12 = const 300 : s16i
    store %12, %1, align 2
    %13 = const 60000 : u16i
    store %13, %2, align 2
    %14 = const -5 : s8i
    store %14, %3, align 1
    %15 = const 200 : u8i
    store %15, %4, align 1
    %16 = const 123456789 : s64i
    store %16, %5, align 8
    %17 = const 123456789 : u64i
    store %17, %6, align 8
    %18 = const -7 : s64i
    store %18, %7, align 8
    %19 = get_global @printf : ((s8i*, ...) -> s32i)*
    %20 = get_global @.str : s8i[31]*
    %21 = cast(array_to_ptrdecay) %20 : s8i*
    %22 = load %1 : s16i, align 2
    %23 = cast(integral) %22 : s32i
    %24 = load %2 : u16i, align 2
    %25 = cast(integral) %24 : s32i
    %26 = load %3 : s8i, align 1
    %27 = cast(integral) %26 : s32i
    %28 = load %4 : u8i, align 1
    %29 = cast(integral) %28 : s32i
    %30 = load %5 : s64i, align 8
    %31 = load %6 : u64i, align 8
    %32 = load %7 : s64i, align 8
    %33 = call @printf(%21, %23, %25, %27, %29, %30, %31, %32) : s32i [all]
    %34 = const 300 : s32i
    store %34, %8, align 4
    %35 = const -1 : s32i
    store %35, %9, align 4
    %36 = const 70000 : u32i
    store %36, %10, align 4
    %37 = get_global @printf : ((s8i*, ...) -> s32i)*
    %38 = get_global @.str.1 : s8i[24]*
    %39 = cast(array_to_ptrdecay) %38 : s8i*
    %40 = load %8 : s32i, align 4
    %41 = load %4 : u8i, align 1
    %42 = cast(integral) %41 : s32i
    %43 = load %9 : s32i, align 4
    %44 = load %10 : u32i, align 4
    %45 = load %10 : u32i, align 4
    %46 = call @printf(%39, %40, %42, %43, %44, %45) : s32i [all]
    %47 = const 0 : s32i
    store %47, %0
    %48 = load %0 : s32i
    return %48
}
