tests/snapshots/snapshot_fixtures__fixtures__printf_narrow_length_modifiers_precision_alternate.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/printf_narrow_length_modifiers_precision_alternate.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[27] = "%.2hhd %.3hd %#hhx %08hhx\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[20] = "%.4hho %.2hhx %hhu\n" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[12] = "%.5hd %#hx\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "a", align 4
    %2 = alloca s32i, "b", align 4
    %3 = alloca u32i, "c", align 4
    %4 = const 0 : s32i
    store %4, %0
    %5 = const 300 : s32i
    store %5, %1, align 4
    %6 = const -5 : s32i
    store %6, %2, align 4
    %7 = const 400 : u32i
    store %7, %3, align 4
    %8 = get_global @printf : ((s8i*, ...) -> s32i)*
    %9 = get_global @.str : s8i[27]*
    %10 = cast(array_to_ptrdecay) %9 : s8i*
    %11 = load %1 : s32i, align 4
    %12 = load %2 : s32i, align 4
    %13 = load %1 : s32i, align 4
    %14 = load %1 : s32i, align 4
    %15 = call @printf(%10, %11, %12, %13, %14) : s32i [all]
    %16 = get_global @printf : ((s8i*, ...) -> s32i)*
    %17 = get_global @.str.1 : s8i[20]*
    %18 = cast(array_to_ptrdecay) %17 : s8i*
    %19 = load %1 : s32i, align 4
    %20 = load %1 : s32i, align 4
    %21 = load %3 : u32i, align 4
    %22 = call @printf(%18, %19, %20, %21) : s32i [all]
    %23 = get_global @printf : ((s8i*, ...) -> s32i)*
    %24 = get_global @.str.2 : s8i[12]*
    %25 = cast(array_to_ptrdecay) %24 : s8i*
    %26 = load %2 : s32i, align 4
    %27 = load %3 : u32i, align 4
    %28 = call @printf(%25, %26, %27) : s32i [all]
    %29 = const 0 : s32i
    store %29, %0
    %30 = load %0 : s32i
    return %30
}
