tests/snapshots/snapshot_fixtures__fixtures__printf_narrow_length_modifiers_rejected.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/printf_narrow_length_modifiers_rejected.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[8] = "%.*hhd\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[7] = "%.*hd\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "x", align 4
    %2 = alloca s32i, "prec", align 4
    %3 = const 0 : s32i
    store %3, %0
    %4 = const 300 : s32i
    store %4, %1, align 4
    %5 = const 2 : s32i
    store %5, %2, align 4
    %6 = get_global @printf : ((s8i*, ...) -> s32i)*
    %7 = get_global @.str : s8i[8]*
    %8 = cast(array_to_ptrdecay) %7 : s8i*
    %9 = load %2 : s32i, align 4
    %10 = load %1 : s32i, align 4
    %11 = call @printf(%8, %9, %10) : s32i [all]
    %12 = get_global @printf : ((s8i*, ...) -> s32i)*
    %13 = get_global @.str.1 : s8i[7]*
    %14 = cast(array_to_ptrdecay) %13 : s8i*
    %15 = load %2 : s32i, align 4
    %16 = load %1 : s32i, align 4
    %17 = call @printf(%14, %15, %16) : s32i [all]
    %18 = const 0 : s32i
    store %18, %0
    %19 = load %0 : s32i
    return %19
}
