tests/snapshots/snapshot_fixtures__fixtures__printf_partial_conversion.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/printf_partial_conversion.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[10] = "first %d\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[13] = "dynamic %*d\n" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[9] = "last %d\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @printf : ((s8i*, ...) -> s32i)*
    %3 = get_global @.str : s8i[10]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    %5 = const 1 : s32i
    %6 = call @printf(%4, %5) : s32i [all]
    %7 = get_global @printf : ((s8i*, ...) -> s32i)*
    %8 = get_global @.str.1 : s8i[13]*
    %9 = cast(array_to_ptrdecay) %8 : s8i*
    %10 = const 5 : s32i
    %11 = const 2 : s32i
    %12 = call @printf(%9, %10, %11) : s32i [all]
    %13 = get_global @printf : ((s8i*, ...) -> s32i)*
    %14 = get_global @.str.2 : s8i[9]*
    %15 = cast(array_to_ptrdecay) %14 : s8i*
    %16 = const 3 : s32i
    %17 = call @printf(%15, %16) : s32i [all]
    %18 = const 0 : s32i
    store %18, %0
    %19 = load %0 : s32i
    return %19
}
