tests/snapshots/snapshot_fixtures__fixtures__printf_pointer.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/printf_pointer.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "%p\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[8] = "addr=%p" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca void*, "stable", align 8
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 4660 : u64i
    %4 = cast(int_to_ptr) %3 : void*
    store %4, %1, align 8
    %5 = get_global @printf : ((s8i*, ...) -> s32i)*
    %6 = get_global @.str : s8i[4]*
    %7 = cast(array_to_ptrdecay) %6 : s8i*
    %8 = load %1 : void*, align 8
    %9 = call @printf(%7, %8) : s32i [all]
    %10 = get_global @printf : ((s8i*, ...) -> s32i)*
    %11 = get_global @.str.1 : s8i[8]*
    %12 = cast(array_to_ptrdecay) %11 : s8i*
    %13 = const 43981 : u64i
    %14 = cast(int_to_ptr) %13 : void*
    %15 = call @printf(%12, %14) : s32i [all]
    %16 = const 0 : s32i
    store %16, %0
    %17 = load %0 : s32i
    return %17
}
